# KE_mgnify

./: .gitignore  README.md  pyproject.toml
notebooks/: README.md  adam-simplified.ipynb  catboost-go-5.0-subset-exptype-rm.ipynb  catboost-go-5.0-subset-exptype.ipynb  catboost-go-with-runs.ipynb
notebooks/transform/: go-aggregated-abundances.ipynb
notebooks/unorganized/: catboost-go-5.0-subset-exptype-rm-Copy1.ipynb  feature-analysis.ipynb  samples-transform-runs.ipynb  samples-transform-runs1.ipynb
scripts/: download_samples  download_studies  run_abundance_downloads
src/download_abundances/: README.md  by_sample.py  by_study.py  main.py
src/mgnify_orm/: main.py
