[tool.poetry]
name = "ke_mgnify"
version = "0.1.0"
description = "Utilities for downloading and transforming mgnify data"
authors = ["Jay R Bolton <jayrbolton@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
